[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqloutbox"
version = "0.4.0"
description = "Config-driven SQLite transactional outbox — multi-app TOML config, per-table injection control, .env/Doppler credential loading, multi-target sync daemon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sandeep Yadav" }]
keywords = [
    "outbox", "sqlite", "queue", "durable", "event-sourcing",
    "messaging", "transactional-outbox", "linked-list",
    "sync-daemon", "middleware", "toml-config", "doppler",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = []   # stdlib only — sqlite3, pathlib, dataclasses, logging, asyncio, json, tomllib (3.11+)

[project.scripts]
sqloutbox = "sqloutbox.cli:main"

[project.urls]
Homepage = "https://github.com/sandeepyadav1478/sqloutbox"
Repository = "https://github.com/sandeepyadav1478/sqloutbox"
Issues = "https://github.com/sandeepyadav1478/sqloutbox/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sqloutbox"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]

[project.optional-dependencies]
toml = ["tomli>=2.0; python_version < '3.11'"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
